--- a/app/src/main/res/layout/activity_driving_lisence.xml
+++ b/app/src/main/res/layout/activity_driving_lisence.xml
@@ -154,7 +154,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Select and upload your KYC document"
+                        android:text="Upload your KYC document"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -215,13 +215,21 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="20dp"
-                        android:layout_marginTop="10dp"
                         android:background="@drawable/button_bg"
                         android:backgroundTint="#0D229A"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="SUBMIT"
                         android:textColor="@color/white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="SKIP"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:id="@+id/tvSkip"
+                        android:padding="10dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
