--- a/app/src/main/res/layout/activity_passport.xml
+++ b/app/src/main/res/layout/activity_passport.xml
@@ -154,7 +154,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Select and upload your KYC document"
+                        android:text="Upload your KYC document"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textSize="15sp" />
@@ -305,9 +305,17 @@
                         android:textColor="@color/white"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
                         android:backgroundTint="#0D229A"
                         android:text="SUBMIT" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="SKIP"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:id="@+id/tvSkip"
+                        android:padding="10dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
