--- a/app/src/main/res/layout/activity_mail_verification.xml
+++ b/app/src/main/res/layout/activity_mail_verification.xml
@@ -155,7 +155,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Enter Your Email Address to Continue."
+                        android:text="Verify your email address"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textSize="15sp" />
@@ -163,13 +163,16 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="20dp"
                         android:orientation="horizontal">
 
-                        <EditText
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Email Address"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:gravity="center"
                             android:inputType="textEmailAddress"
                             android:textColor="@color/black"
                             android:id="@+id/etEmailAddress"/>
@@ -179,9 +182,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="CONTINUE"
+                        android:text="VERIFY"
                         android:gravity="center"
                         android:padding="10dp"
+                        android:layout_margin="20dp"
                         android:textColor="@color/white"
                         android:id="@+id/btnContinue"
                         android:layout_marginTop="20dp"
