--- a/app/src/main/res/layout/activity_details_list.xml
+++ b/app/src/main/res/layout/activity_details_list.xml
@@ -130,6 +130,82 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/llPanCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:weightSum="1.5"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight=".4"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="8dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pan Card Details"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Submit Your Pan Card"
+                        android:textSize="14sp"
+                        android:textColor="@color/gray1"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.1"
+                    android:gravity="end"
+                    android:padding="15dp"
+                    >
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        app:cardBackgroundColor="@color/baseColor"
+                        app:cardCornerRadius="50dp"
+                        >
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_margin="2.5dp"
+                            app:cardCornerRadius="50dp"
+                            >
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/percentPan"
+                                android:gravity="center"
+                                android:textColor="@color/baseColor"
+                                android:textSize="16sp"
+                                android:text="0%"
+                                />
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/llPersonalDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -550,6 +626,7 @@
                         android:text="Need Help? Request a callback"/>
 
                     <TextView
+                        android:id="@+id/tvCall"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Call me"
