--- a/app/src/main/res/layout/activity_voter.xml
+++ b/app/src/main/res/layout/activity_voter.xml
@@ -105,7 +105,7 @@
                                     android:gravity="center"
                                     android:text="0%"
                                     android:textColor="@color/white"
-                                    android:textSize="20sp" />
+                                    android:textSize="14sp" />
 
 
                             </androidx.cardview.widget.CardView>
@@ -213,8 +213,8 @@
 
                             <ImageView
                                 android:id="@+id/ivVoterFont"
-                                android:layout_width="200dp"
-                                android:layout_height="130dp"
+                                android:layout_width="250dp"
+                                android:layout_height="200dp"
                                 android:layout_marginTop="5dp"
                                 android:scaleType="fitXY"
                                 android:src="@drawable/voter_font" />
@@ -230,8 +230,9 @@
 
                             <ImageView
                                 android:id="@+id/ivVoterBack"
-                                android:layout_width="wrap_content"
+                                android:layout_width="250dp"
                                 android:layout_height="200dp"
+                                android:scaleType="fitXY"
                                 android:src="@drawable/voter_back" />
                         </LinearLayout>
 
